--- a/res/layout/activity_input.xml
+++ b/res/layout/activity_input.xml
@@ -1,7 +1,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:padding="10dip" >
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -16,7 +17,6 @@
             android:id="@+id/input_data_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dip"
             android:gravity="center"
             android:text="@string/input_data_text"
             android:textAppearance="?android:attr/textAppearanceLarge" />
