--- a/res/layout/activity_input.xml
+++ b/res/layout/activity_input.xml
@@ -34,7 +34,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:inputType="number" >
+            android:inputType="number"
+            android:selectAllOnFocus="true" >
 
             <requestFocus />
         </EditText>
@@ -52,7 +53,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:inputType="number" />
+            android:inputType="number" 
+            android:selectAllOnFocus="true" />
 
         <Button
             android:id="@+id/calculate"
