Fixed select all on focus in landscape mode

--- a/res/layout-land/activity_input.xml
+++ b/res/layout-land/activity_input.xml
@@ -41,7 +41,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:inputType="number" >
+                android:inputType="number"
+	            android:selectAllOnFocus="true" >
                 <requestFocus />
             </EditText>
         </LinearLayout>
@@ -66,7 +67,8 @@
 	            android:layout_width="match_parent"
 	            android:layout_height="wrap_content"
 	            android:ems="10"
-	            android:inputType="number" />
+	            android:inputType="number"
+	            android:selectAllOnFocus="true" />
         </LinearLayout>
         <Button
             android:id="@+id/calculate"
