--- a/res/menu/activity_main.xml
+++ b/res/menu/activity_main.xml
@@ -1,5 +1,5 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/menu_settings"
-        android:title="@string/menu_settings"
+    <item android:id="@+id/source_code"
+        android:title="@string/source_code"
         android:orderInCategory="100" />
 </menu>
