--- a/res/menu/activity_main.xml
+++ b/res/menu/activity_main.xml
@@ -1,5 +1,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/source_code"
         android:title="@string/source_code"
+        android:orderInCategory="100" /> 
+    <item android:id="@+id/about"
+        android:title="@string/about"
         android:orderInCategory="100" />
 </menu>
