--- a/res/layout-land/activity_output.xml
+++ b/res/layout-land/activity_output.xml
@@ -36,7 +36,7 @@
                     android:id="@+id/bar"
                     android:layout_width="fill_parent"
                     android:layout_height="match_parent"
-                    android:contentDescription="@string/empty"
+                    android:contentDescription=""
                     android:scaleType="fitXY"
                     android:src="@drawable/ic_bar" />
 
@@ -44,7 +44,7 @@
                     android:id="@+id/marker"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:contentDescription="@string/empty"
+                    android:contentDescription=""
                     android:scaleType="center"
                     android:src="@drawable/ic_marker" />
             </FrameLayout>
